--- a/app/views/evaluations/challenge.html.haml
+++ b/app/views/evaluations/challenge.html.haml
@@ -53,7 +53,7 @@
           = render "tasks/take_task", f: f
       
       %div.CRbuttonspace
-        = link_to "Skip Question", continue_evaluation_url(@evaluation, @path), class: "button button-standard", style: "float: left;", confirm: "Note: You will not be able to come back to this question once you skip it."
+        = link_to "Skip Question", continue_evaluation_url(@evaluation, @path), class: "button button-standard", style: "float: left;", data: { confirm: "Note: You will not be able to come back to this question once you skip it." }
         = f.submit "Submit", class: "button button-actionable", id: "submit_button", style: "float:right;"
         - if @task.time_limit
           .countdown{ data: { time: @task.time_limit } }
