--- a/app/views/evaluations/_table.html.haml
+++ b/app/views/evaluations/_table.html.haml
@@ -24,7 +24,7 @@
             %div{ "data-tip" => "Edit" }
               %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/gear_dark_small.png", alt: "Edit", class: "gear small"}
         %td.icon_table_cell
-          = link_to group_evaluation_path(@group, e), method: :delete, confirm: "Are you sure you want to delete this Evaluation? This action is irreversible." do
+          = link_to group_evaluation_path(@group, e), method: :delete, data: { confirm: "Are you sure you want to delete this Evaluation? This action is irreversible." } do
             %div{ "data-tip" => "Delete" }
               %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/trash.png", alt: "Delete", class: "gear small"}
     - if @evaluations.empty?
