--- a/app/views/newsfeed/_post.html.haml
+++ b/app/views/newsfeed/_post.html.haml
@@ -32,7 +32,7 @@
                     %div{ style: "margin: -15px -1px 5px;"}
                       %ul.profile_dropdown{ style: "list-style: none; margin: 0px; padding: 0; min-width: 120px;"}
                         %li= link_to "Edit Submission", take_section_path(post.section_id, task_id: post.task_id), style: "padding: 3px 20px 3px 12px;"
-                        %li{style: "text-align:center;"}= link_to "Delete Submission", retract_submission_path(post.id), remote: true, confirm: "Are you sure you want to delete your submission?", class: "retract_link", style: "padding: 3px 20px 3px 12px; margin: 0;"
+                        %li{style: "text-align:center;"}= link_to "Delete Submission", retract_submission_path(post.id), remote: true, data: { confirm: "Are you sure you want to delete your submission?" }, class: "retract_link", style: "padding: 3px 20px 3px 12px; margin: 0;"
             - else
               = link_to vote_task_path(post.task_id, sa_id: post.submitted_answer_id), remote: true, class: ("btn vote_button " + (feed.votes.include?(post.submitted_answer_id) ? "btn-info" : "")) do
                 %img.up_vote{ src: ICON_UPVOTE_URL, alt: "Up-vote" }
