--- a/app/views/paths/collaborator.html.haml
+++ b/app/views/paths/collaborator.html.haml
@@ -10,7 +10,7 @@
           %td{ style: "width:75px;" }= image_tag c.picture, size: "75x75"
           %td
             %p= c.name
-            %p= link_to "Remove", undo_collaboration_path_path(@path.permalink, user_id: c.id), method: "put", confirm: "Are you certain you want to stop collaborating with this user?"
+            %p= link_to "Remove", undo_collaboration_path_path(@path.permalink, user_id: c.id), method: "put", data: { confirm: "Are you certain you want to stop collaborating with this user?" }
   %hr
   %p You can add new collaborations below entering their email address.
   = form_tag({controller: :paths, action: :collaborator}, method: :put, style: "margin-top: 30px;")
