--- a/app/views/paths/edit.html.haml
+++ b/app/views/paths/edit.html.haml
@@ -53,7 +53,7 @@
       - if @enable_administration
         .control-group{ style: "margin-bottom: 10px;" }
           %label.control-label Permanently delete Challenge
-          .controls{ style: "margin-top: 6px;" }= link_to "Delete", path_url(@path), method: :delete, confirm: "Are you sure you want to delete this Challenge? The Challenge will be removed from all your Evaluations and all candidate information collected with this Challenge will be deleted. This action is irreversible.", style: "line-height:18px; padding-top: 5px;"
+          .controls{ style: "margin-top: 6px;" }= link_to "Delete", path_url(@path), method: :delete, data: { confirm: "Are you sure you want to delete this Challenge? The Challenge will be removed from all your Evaluations and all candidate information collected with this Challenge will be deleted. This action is irreversible." }, style: "line-height:18px; padding-top: 5px;"
       - if false
         .control-group{ style: "margin-bottom: 5px;" }
           %label.control-label Collaborators
@@ -81,9 +81,9 @@
           .controls{ style: "padding-top: 8px;" }= link_to "Delete", confirm_delete_section_path(s)
         %div{ style: "float:left; margin: 20px 20px 0px 0;" }
           - if s.published_at
-            = link_to "Unpublish", unpublish_section_path(s), class: "button button-info", confirm: "Are you sure you want to unpublish this section?"
+            = link_to "Unpublish", unpublish_section_path(s), class: "button button-info", data: { confirm: "Are you sure you want to unpublish this section?" }
           - else
-            = link_to "Publish", publish_section_path(s), class: "button button-info", confirm: "Are you sure you want to publish this section?"
+            = link_to "Publish", publish_section_path(s), class: "button button-info", data: { confirm: "Are you sure you want to publish this section?" }
         %div{ style: "float:right; margin: 20px 0 0px 0;" }
           %span.button.button-standard{ onclick: "$(this).parents('.modal').modal('hide');", style: "margin-right: 8px;" } Close
           = f.submit "Save", class: "button button-actionable"
@@ -111,7 +111,7 @@
           - elsif @path.published?
             = link_to "Waiting for Approval", "#", class: "button button-actionable disabled"
           - else
-            = link_to "Publish", publish_path_path(@path.permalink), class: "button button-actionable", confirm: (@group ? "Once published, your challenge will be available to be added to your evaluations, though you can return here and edit it at any time." : "Your Challenge must be approved by an admin before it's published. It can take up to 24 hours for a Challenge to be approved.")
+            = link_to "Publish", publish_path_path(@path.permalink), class: "button button-actionable", data: { confirm: (@group ? "Once published, your challenge will be available to be added to your evaluations, though you can return here and edit it at any time." : "Your Challenge must be approved by an admin before it's published. It can take up to 24 hours for a Challenge to be approved.") }
           %span.button.button-standard.edit_path_settings_button{ onclick: "$('#settings_modal').modal({keyboard: true, show: true})"} Settings
     %div
       - unless @group
