--- a/app/views/sections/_overview.html.haml
+++ b/app/views/sections/_overview.html.haml
@@ -6,7 +6,7 @@
         - if !s.published_at
           %p You have not published this section yet.
           %p <strong>NOTE:</strong> Publishing a section will not make the entire Challenge visible.
-          %p= link_to "Publish", publish_section_path(s), confirm: "Are you sure you want to publish this section?"
+          %p= link_to "Publish", publish_section_path(s), data: { confirm: "Are you sure you want to publish this section?" }
         - elsif s.path.enrolled_users.empty?
           %p You do not have any users yet.
         - else
