--- a/app/views/paths/_difficulty_warning.html.haml
+++ b/app/views/paths/_difficulty_warning.html.haml
@@ -1,5 +1,5 @@
-.welcome{ style: "margin: 5px;" }
+.welcome{ style: "margin: 5px 5px 15px 5px;" }
   .holder
-    .text_box{ style: "font-size: 16px; width: 100%; margin: 0px;" }
-      This challenge does not have enough difficult questions to accurately assess a candidates skill level beyond whether they are competent or not. 
-      Add more difficult questions, or update the difficulty of existing questions, to help MetaBright better calculate the skill levels of your candidates.
+    .text_box{ style: "font-size: 16px; width: 100%; margin: 0px; line-height: 20px;" }
+      This challenge does not have enough difficult questions to accurately assess your candidates' skills beyond whether they have a skill level of Competent.
+      Add questions of greater difficulty, or update the difficulty of existing questions, to help MetaBright better calculate the skill levels of your candidates.
