--- a/app/views/paths/_difficulty_warning.html.haml
+++ b/app/views/paths/_difficulty_warning.html.haml
@@ -2,4 +2,4 @@
   .holder
     .text_box{ style: "font-size: 16px; width: 100%; margin: 0px; line-height: 20px;" }
       This challenge does not have enough difficult questions to accurately assess your candidates' skills beyond whether they have a skill level of Competent.
-      Add questions of greater difficulty, or update the difficulty of existing questions, to help MetaBright better calculate the skill levels of your candidates.
+      Add questions of greater difficulty, or update the difficulty of existing questions to help MetaBright better calculate the skill levels of your candidates.
