--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -430,6 +430,7 @@ code.content { border: none; color: #404040; display: block; padding: 10px; font
 .help_close { margin: 4px 0 0 0; }
 
 .login_link { cursor: pointer; }
+.register_link { cursor: pointer; }
 
 body{background-image: url('https://s3.amazonaws.com/moonlite-nsdub/static/easterislandsketch70pct.jpg');background-repeat:no-repeat;background-attachment:fixed;background-size:100% 100%;font-family: 'MuliLight', 'Helvetica', 'Arial', sans-serif; line-height:18px; font-size:13px;}
 .quizcontainer{
@@ -838,8 +839,8 @@ h1, h2, h3, h4, h5, h6, p, div, a { font-family: 'MuliLight', 'Helvetica', 'Aria
   .modal_close img { width:20px; height:20px; }
 }
 
-/* Sign in Modal */
-#login_modal {
+/* Sign in and Register Modals */
+#login_modal, #register_modal {
   background-color: transparent; 
   border: none; 
   box-shadow: none;
@@ -1383,7 +1384,7 @@ h1, h2, h3, h4, h5, h6, p, div, a { font-family: 'MuliLight', 'Helvetica', 'Aria
         font-size: 16px;
         background: $employer_green;
         display: inline-block;
-        padding: 8px 12px;
+        padding: 8px 10px;
         border-radius: 8px;
         color: white;
         
