--- a/app/views/layouts/_styles_and_scripts.html.haml
+++ b/app/views/layouts/_styles_and_scripts.html.haml
@@ -44,11 +44,15 @@
     $(".image_url_preview").attr("src", link);
     $("#image_url_preview").attr("src", link);
   });
+  
+  $(".register_link").click(function(){
+    $("#register_modal").modal({ keyboard: true, backdrop: 'static', show: true });
+  });
 
   $(".login_link").click(function(){
     $("#login_modal").modal({ keyboard: true, backdrop: 'static', show: true });
   });
-
+  
   $(".arena_report_link").click(function(){
     $("#report_issue_modal").modal({ keyboard: true, backdrop: 'static', show: true });
   });
