--- a/app/views/evaluations/challenge.html.haml
+++ b/app/views/evaluations/challenge.html.haml
@@ -20,8 +20,13 @@
   
     $(function(){
       var time_limit = #{@task.time_limit};
-      var timerCountdown = setInterval(function(){ setTimer(); }, 1000);
-      var timedSubmit = setTimeout(function(){ $("#challenge_form").submit() }, time_limit*1000);
+      if(window.timerCountdown)
+        clearInterval(window.timerCountdown)
+      if(window.timedSubmit)
+        clearTimeout(window.timedSubmit)
+        
+      window.timerCountdown = setInterval(function(){ setTimer(); }, 1000);
+      window.timedSubmit = setTimeout(function(){ $("#challenge_form").submit() }, time_limit*1000);
     });
   
 :css
@@ -53,7 +58,7 @@
           = render "tasks/take_task", f: f
       
       %div.CRbuttonspace
-        = link_to "Skip Question", continue_evaluation_url(@evaluation, @path), class: "button button-standard", style: "float: left;", data: { confirm: "Note: You will not be able to come back to this question once you skip it." }
+        = link_to "Skip Question", continue_evaluation_url(@evaluation, @path), class: "button button-standard", style: "float: left;", data: { confirm: "Note: You will not be able to come back to this question once you skip it.", "no-turbolinks" => true }
         = f.submit "Submit", class: "button button-actionable", id: "submit_button", style: "float:right;"
         - if @task.time_limit
           .countdown{ data: { time: @task.time_limit } }
