register modal and more challenges on upheaval

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,9 +10,11 @@
         = render "modals/launchpad"
       - if show_nav_bar
         = render "modals/explore"
+      
       - if current_user.guest_user?
         = render "modals/login"
     - else
+      = render "modals/register"
       = render "modals/login"
       
     = render "layouts/navbar"
