--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -104,7 +104,7 @@ $landing_green: #73bb6e;
     text-align: center;
     
     .span12 {
-      padding: 0 8px;
+      padding: 0 40px;
       
       .explore_link { float: right; }
       .back { float: left; font-size: 16px; margin-top: 6px;}
@@ -115,7 +115,7 @@ $landing_green: #73bb6e;
     
     h3{
       color: inherit;
-      margin-bottom: 26px;
+      margin-bottom: 10px;
     }
     ul {
       position: relative;
@@ -132,22 +132,22 @@ $landing_green: #73bb6e;
       li {
         display: inline-block;
         float: left;
-        height: 100px;
-        width: 100px;
-        padding: 15px 56px;
-        &:nth-child(1) {padding-left: 0;}
-        &:nth-child(5) {padding-right: 0;}
-        &:nth-child(6) {padding-left: 0;}
-        &:nth-child(10) {padding-right: 0;}
+        height: 65px;
+        width: 65px;
+        padding: 9px 37px;
+        &:nth-child(7n+1) {padding-left: 0;}
+        &:nth-child(7n) {padding-right: 0;}
         
         img {
-          height: 100px;
-          width: 100px;
+          height: 65px;
+          width: 65px;
           
           &:hover { box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.48); };
         }
       }
     }
+    .footer { margin-top: 10px; }
+    
   }
   #happy_users {
     background-color: $landing_green;
