--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -861,6 +861,8 @@ h1, h2, h3, h4, h5, h6, p, div, a { font-family: 'MuliLight', 'Helvetica', 'Aria
     min-height: 235px; 
     text-align: center;
     
+    h4 {margin-top: 15px;}
+    .submit_button { float: none; }
     p { padding: 10px; font-size: 15px; }
     .social-sign-in-options {
       div { margin: 0 auto 12px; width: 244px;}
