touching up register modal

--- a/app/views/modals/_register.html.haml
+++ b/app/views/modals/_register.html.haml
@@ -9,39 +9,8 @@
           %span Welcome to MetaBright
       %hr
       .explorebody
-        %h4 Which best describes you?
+        %p{ style: "margin-bottom: 0;"} Before signing up, please select which option best describes you:
         %div
-          %a.submit_button I want to prove my skills and make myself more marketable.
-          = link_to "I have job candidates that I want evaluated.", pricing_path, class: "submit_button"
+          = link_to "I want to prove my skills and make myself more marketable.", new_user_path, class: "submit_button", style: "margin: 10px 20px"
+          = link_to "I help hire people -- I have job candidates that I want evaluated.", pricing_path, class: "submit_button", style: "margin: 10px 20px"
         .clear_floats
-        / .social-sign-in-options
-/           %div
-/             = link_to "/auth/google_oauth2", class: "submit_button" do
-/               = image_tag ICON_LOGIN_GOOGLE, alt: "Google"
-/               %span.landingbuttontext Sign in with Google »
-/         
-/           %div{style: "background-image: url(#{ICON_DIVIDER_URL}); background-repeat:no-repeat; background-position: center 10px; width:234px; margin:10px auto; "}
-/         
-/           %div
-/             = link_to "/auth/facebook", class: "submit_button" do
-/               = image_tag ICON_LOGIN_FACEBOOK, alt: "Facebook"
-/               %span.landingbuttontext Sign in with Facebook »
-/         
-/           %div{style: "background-image: url(#{ICON_DIVIDER_URL}); background-repeat:no-repeat; background-position: center 10px; width:234px; margin:10px auto; "}
-/         
-/           %div
-/             = link_to "/auth/linkedin", class: "submit_button" do
-/               = image_tag ICON_LOGIN_LINKEDIN, alt: "LinkedIn"
-/               %span.landingbuttontext Sign in with LinkedIn »
-/         
-/           %div{style: "background-image: url(#{ICON_DIVIDER_URL}); background-repeat:no-repeat; background-position: center 10px; width:234px; margin:10px auto; "}
-/ 
-/           %div{ style: "margin-bottom: 0;"}
-/             = link_to "/auth/github", class: "submit_button" do
-/               = image_tag ICON_LOGIN_GITHUB, alt: "Github"
-/               %span.landingbuttontext Sign in with Github »
-/         
-/         %div{style:"padding:12px;"}
-/           - unless current_user
-/             %p
-/               = link_to "Sign in with email & password", signin_path
